--- a/index.html
+++ b/index.html
@@ -4,27 +4,51 @@
   <meta charset="UTF-8">
   <title>Leak Technologies</title>
   <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       background-color: black;
       color: #33FF33;
-      font-family: 'Hack', 'Courier New', Courier, monospace;
+      font-family: 'Hack', 'Courier New', monospace;
       font-size: 14px;
-      white-space: pre;
-      padding: 20px;
       text-shadow: 0 0 5px #33FF33;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+    .logo-frame, .content-frame {
+      border: 1px solid #33FF33;
+      padding: 12px 18px;
+      margin: 10px;
+      width: fit-content;
+      max-width: 90%;
+    }
+    .logo-frame pre {
+      margin: 0;
+      white-space: pre;
+    }
+    .content-frame {
+      text-align: left;
+      white-space: pre-wrap;
     }
     .blink {
       animation: blink 1s steps(2, start) infinite;
     }
     @keyframes blink {
-      0%   { opacity: 1; }
-      50%  { opacity: 0; }
-      100% { opacity: 1; }
+      0%, 100% { opacity: 1; }
+      50% { opacity: 0; }
     }
   </style>
 </head>
 <body>
+
+<div class="logo-frame">
+<pre>
 .==========......:-===-:.............-====:......-============+==+===.
 .*###**#==+...-###########:......:*##########=...+###***=====***####+.
 .*###**#==+.-*##############-...*##############=.+###***===##**####*-.
@@ -39,9 +63,24 @@
 ..............................-==-......::..........-.......::........
 ...............................          Technologies            .......
 ........................................................................
-........................................................................
+</pre>
+</div>
 
-Initializing LEAK Technologies secure terminal...
+<div class="content-frame">
+    <a href="https://github.com/stu-the-ironman/HULL_ioQ3a" target="_blank">
+      HULL (Based on Quake 3 Engine) [v1.2.3]
+    </a>
+  
+    <a href="https://github.com/LeakTechnologies/Telefact" target="_blank">
+      Telefact – Ceefax-style RSS Reader [v0.9.5]
+    </a>
+  
+    >_<span class="blink"></span>
+</div>
+  
+
 >_<span class="blink"></span>
+</div>
+
 </body>
 </html>
