--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <div class="main-frame">
   <div class="logo-frame">
     <pre>
-.==========......:-===-:.............-====:......-============+==+===.
-.*###**#==+...-###########:......:*##########=...+###***=====***####+.
-.*###**#==+.-*##############-...*##############=.+###***===##**####*-.
-.*###**#==+=###%*********####=:####*********####++###***===#*######-..
-.*###**#==*####****===****####%####***===*#**########***===#####*=....
-.*###**#==*####***=====*#######*********===***#######***+==%%*-:......
-.*###**#*=*####**#+===========:..:*####*===***#######***===#####+.....
-.-####***##*####***#*********#:.*#######===***#######***===#######+...
-..=######*#.+#####************:####*****===***#######***===#***####*:.
-....+######..-*####################**#=====***#######***====+#**####=.
-......:-+**.....-=**################*++++++############**++++*######+.
-..............................-==-......::..........-.......::........
-...............................          Technologies            .......
+..==========......:-===-:.............-====:......-============+==+===..
+..*###**#==+...-###########:......:*##########=...+###***=====***####+..
+..*###**#==+.-*##############-...*##############=.+###***===##**####*-..
+..*###**#==+=###%*********####=:####*********####++###***===#*######-...
+..*###**#==*####****===****####%####***===*#**########***===#####*=.....
+..*###**#==*####***=====*#######*********===***#######***+==%%*-:.......
+..*###**#*=*####**#+===========:..:*####*===***#######***===#####+......
+..-####***##*####***#*********#:.*#######===***#######***===#######+....
+...=######*#.+#####************:####*****===***#######***===#***####*:..
+.....+######..-*####################**#=====***#######***====+#**####=..
+.......:-+**.....-=**################*++++++############**++++*######+..
+...............................-==-......::..........-.......::.........
+................................          Technologies            ......
 ........................................................................
     </pre>
   </div>
