--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Leak Technologies</title>
-  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Hack&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hack&display=swap"></noscript>
+  <link rel="stylesheet" href="styles.css">  
 </head>
 <body>
 
