--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <div class="main-frame">
   <div class="logo-frame">
     <pre>
+........................................................................
 ..==========......:-===-:.............-====:......-============+==+===..
 ..*###**#==+...-###########:......:*##########=...+###***=====***####+..
 ..*###**#==+.-*##############-...*##############=.+###***===##**####*-..
@@ -23,8 +24,8 @@
 ...=######*#.+#####************:####*****===***#######***===#***####*:..
 .....+######..-*####################**#=====***#######***====+#**####=..
 .......:-+**.....-=**################*++++++############**++++*######+..
-...............................-==-......::..........-.......::.........
-................................          Technologies            ......
+........................................................................
+................................        Technologies          ..........
 ........................................................................
     </pre>
   </div>
