--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
       <span id="telefact-tag" class="tag-text">[v0.9.0]</span>
     </div>
 
-    <div class="project-line">
-      <span>&gt;<span class="blink-underscore">_</span></span>
-    </div>
+    <div class="prompt-line">
+        <span>&gt;<span class="blink-underscore">_</span></span>
+    </div>         
   </div>
 </div>
 
