--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <span id="hull-tag" class="tag-text">[v1.0.0]</span>
     </div>
 
-    <div class="project-line">
+    <div class="project-line">  
       <a href="https://github.com/LeakTechnologies/Telefact" target="_blank">
         <span class="link-text">Telefact – Ceefax-style RSS Reader</span>
       </a>
@@ -52,6 +52,12 @@
     </div>    
 </div>
 
+<div class="social-frame">
+    <a href="https://x.com/stutheironman" target="_blank" class="x-link">
+      <span class="x-logo">X</span> @stutheironman
+    </a>
+</div>
+  
 <script>
   fetch('tags.json')
     .then(response => response.json())
