--- a/index.html
+++ b/index.html
@@ -53,14 +53,11 @@
 </div>
 
 <div class="social-frame">
-    <a href="https://x.com/stutheironman" target="_blank" class="x-link">
-      <svg class="x-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 1227" width="16" height="16" fill="currentColor">
-        <path d="M1126 0H931L601 433 272 0H0l465 641L0 1227h195l328-439 331 439h272L731 590 1126 0z"/>
-      </svg>
-      <span class="x-handle">@stutheironman</span>
-    </a>
-  </div>
-  
+  <a href="https://x.com/stutheironman" target="_blank" class="x-link">
+    <img src="assets/logos/x-logo-white.png" alt="X logo" class="x-icon">
+    <span class="x-handle">@stutheironman</span>
+  </a>
+</div>
   
 <script>
   fetch('tags.json')
