--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Hack&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hack&display=swap"></noscript>
   <link rel="stylesheet" href="styles.css">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
