--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <title>Leak Technologies</title>
-  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Hack&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hack&display=swap"></noscript>
-  <link rel="stylesheet" href="styles.css">  
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Hack&display=swap"
+        as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Hack&display=swap">
+  </noscript>
+  <link rel="stylesheet" href="styles.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
 <div class="main-frame">
   <div class="logo-frame">
-    <pre>
-
+    <div class="ascii-wrap">
+      <pre>
 ........................................................................
 ..=###======......:-###-:.............-###:.......-###***======+==+###..
 ..*###**#==+...-###########:......:*##########=...+###***=====***####+..
@@ -29,8 +32,8 @@
 ........................................................................
 ................................        Technologies          ..........
 ........................................................................
-
-    </pre>
+      </pre>
+    </div>
   </div>
 
   <div class="content-frame">
@@ -41,7 +44,7 @@
       <span id="hull-tag" class="tag-text">[v1.0.0]</span>
     </div>
 
-    <div class="project-line">  
+    <div class="project-line">
       <a href="https://github.com/LeakTechnologies/Telefact" target="_blank">
         <span class="link-text">Telefact – Ceefax-style RSS Reader</span>
       </a>
@@ -49,25 +52,24 @@
     </div>
 
     <div class="prompt-line">
-        <span>&gt;<span class="blink-underscore">_</span></span>
-    </div>    
-</div>
+      <span>&gt;<span class="blink-underscore">_</span></span>
+    </div>
+  </div>
 
-<div class="social-frame">
+  <div class="social-frame">
     <a href="https://x.com/stutheironman" target="_blank" class="x-link">
-        <img src="assets/logos/x-logo-green.png" alt="X logo" class="x-icon">
-        <span class="x-handle">@stutheironman</span>
+      <img src="assets/logos/x-logo-green.png" alt="X logo" class="x-icon">
+      <span class="x-handle">@stutheironman</span>
     </a>
   </div>
-  
-  
-  
+</div>
+
 <script>
   fetch('tags.json')
-    .then(response => response.json())
+    .then(r => r.json())
     .then(tags => {
-      document.getElementById("hull-tag").textContent = `[${tags.HULL_ioQ3a || "unknown"}]`;
-      document.getElementById("telefact-tag").textContent = `[${tags.Telefact || "unknown"}]`;
+      document.getElementById("hull-tag").textContent = `[${tags.HULL_ioQ3a||"unknown"}]`;
+      document.getElementById("telefact-tag").textContent = `[${tags.Telefact||"unknown"}]`;
     })
     .catch(() => {
       document.getElementById("hull-tag").textContent = "[error]";
