--- a/index.html
+++ b/index.html
@@ -48,10 +48,11 @@
       <div class="prompt-line">&gt;<span class="blink">_</span></div>
     </div>
 
-    <div class="social-link">
-      <img src="assets/logos/x-logo-green.png" alt="X Logo" />
-      <a href="https://x.com/stutheironman" target="_blank">@stutheironman</a>
-    </div>
+    <div class="x-link">
+        <img src="assets/logos/x-logo-green.png" alt="X logo" />
+        <a href="https://x.com/stutheironman" target="_blank">@stutheironman</a>
+      </div>
+      
 
   </div>
 
