--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
   ..=######*#.+#####************:####*****===***#######***===#***####*:.
   ....+######..-*####################**#=====***#######***====+#**####=.
   ......:-+**.....-=**################*++++++############**++++*######+.
-  ..............................-==-......::..........-.......::........
-  ...............................          Technologies            .......
-  ........................................................................
+  ......................................................................
+  ...............................          Technologies            ......
+  .......................................................................
       </pre>
     </div>
 
