--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   ....+######..-*####################**#=====***#######***====+#**####=.
   ......:-+**.....-=**################*++++++############**++++*######+.
   ......................................................................
-  ...............................          Technologies            ......
-  .......................................................................
+  ...............................          Technologies            .....
+  ......................................................................
       </pre>
     </div>
 
