--- a/index.html
+++ b/index.html
@@ -24,35 +24,38 @@
   ..=######*#.+#####************:####*****===***#######***===#***####*:.
   ....+######..-*####################**#=====***#######***====+#**####=.
   ......:-+**.....-=**################*++++++############**++++*######+.
-  ......................................................................
-  ...............................          Technologies            .....
-  ......................................................................
+  ..............................-==-......::..........-.......::........
+  ...............................          Technologies            .......
+  ........................................................................
       </pre>
     </div>
 
     <div class="content-frame">
-      <div class="project-line">
-        <a href="https://github.com/stu-the-ironman/HULL_ioQ3a" target="_blank">
-          HULL (Based on Quake 3 Engine)
-        </a>
-        <span class="tag-text">[v1.0.0]</span>
-      </div>
+      <div class="content-inner">
 
-      <div class="project-line">
-        <a href="https://github.com/LeakTechnologies/Telefact" target="_blank">
-          Telefact – Ceefax-style RSS Reader
-        </a>
-        <span class="tag-text">[v0.9.0]</span>
-      </div>
+        <div class="project-line">
+          <a href="https://github.com/stu-the-ironman/HULL_ioQ3a" target="_blank" class="link-text">
+            HULL (Based on Quake 3 Engine)
+          </a>
+          <span class="tag-text">[v1.0.0]</span>
+        </div>
 
-      <div class="prompt-line">&gt;<span class="blink">_</span></div>
+        <div class="project-line">
+          <a href="https://github.com/LeakTechnologies/Telefact" target="_blank" class="link-text">
+            Telefact – Ceefax-style RSS Reader
+          </a>
+          <span class="tag-text">[v0.9.0]</span>
+        </div>
+
+        <div class="prompt-line">&gt;<span class="blink">_</span></div>
+
+      </div>
     </div>
 
     <div class="x-link">
-        <img src="assets/logos/x-logo-green.png" alt="X logo" />
-        <a href="https://x.com/stutheironman" target="_blank">@stutheironman</a>
-      </div>
-      
+      <img src="assets/logos/x-logo-green.png" alt="X Logo" />
+      <a href="https://x.com/stutheironman" target="_blank" class="x-handle">@stutheironman</a>
+    </div>
 
   </div>
 
