--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Leak Technologies</title>
-  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet">
 </head>
 <body>
-
-  <div class="main-frame">
-
+  <main class="main-frame">
     <div class="logo-frame">
       <pre>
   .==========......:-===-:.............-====:......-============+==+===.
@@ -25,39 +25,29 @@
   ....+######..-*####################**#=====***#######***====+#**####=.
   ......:-+**.....-=**################*++++++############**++++*######+.
   ..............................-==-......::..........-.......::........
-  ...............................          Technologies            .......
-  ........................................................................
+  ...............................          Technologies            .....
+  ......................................................................
       </pre>
     </div>
 
     <div class="content-frame">
-      <div class="content-inner">
-
-        <div class="project-line">
-          <a href="https://github.com/stu-the-ironman/HULL_ioQ3a" target="_blank" class="link-text">
-            HULL (Based on Quake 3 Engine)
-          </a>
-          <span class="tag-text">[v1.0.0]</span>
-        </div>
-
-        <div class="project-line">
-          <a href="https://github.com/LeakTechnologies/Telefact" target="_blank" class="link-text">
-            Telefact – Ceefax-style RSS Reader
-          </a>
-          <span class="tag-text">[v0.9.0]</span>
-        </div>
-
-        <div class="prompt-line">&gt;<span class="blink">_</span></div>
-
+      <div class="project-line">
+        <span class="link-text"><a href="#">HULL (Based on Quake 3 Engine)</a></span>
+        <span class="tag-text">[v1.0.0]</span>
+      </div>
+      <div class="project-line">
+        <span class="link-text"><a href="#">Telefact – Ceefax-style RSS Reader</a></span>
+        <span class="tag-text">[v0.9.0]</span>
+      </div>
+      <div class="prompt-line">
+        <span>&gt;</span><span class="blink">_</span>
       </div>
     </div>
 
     <div class="x-link">
-      <img src="assets/logos/x-logo-green.png" alt="X Logo" />
-      <a href="https://x.com/stutheironman" target="_blank" class="x-handle">@stutheironman</a>
+      <img src="assets/logos/x-logo-green.png" alt="X Logo">
+      <a class="x-handle" href="https://x.com/stutheironman" target="_blank">@stutheironman</a>
     </div>
-
-  </div>
-
+  </main>
 </body>
 </html>
