--- a/index.html
+++ b/index.html
@@ -45,9 +45,10 @@
     </div>
 
     <div class="x-link">
-      <img src="assets/logos/x-logo-green.png" alt="X Logo">
-      <a class="x-handle" href="https://x.com/stutheironman" target="_blank">@stutheironman</a>
+        <img src="assets/logos/x-logo-green.png" alt="X logo">
+        <a href="https://x.com/stutheironman" class="x-handle" target="_blank">@stutheironman</a>
     </div>
+      
   </main>
 </body>
 </html>
