--- a/index.html
+++ b/index.html
@@ -4,50 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Leak Technologies</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <main class="main-frame">
+  <div class="main-frame">
+
     <div class="logo-frame">
       <pre>
-  .==========......:-===-:.............-====:......-============+==+===.
-  .*###**#==+...-###########:......:*##########=...+###***=====***####+.
-  .*###**#==+.-*##############-...*##############=.+###***===##**####*-.
-  .*###**#==+=###%*********####=:####*********####++###***===#*######-..
-  .*###**#==*####****===****####%####***===*#**########***===#####*=....
-  .*###**#==*####***=====*#######*********===***#######***+==%%*-:......
-  .*###**#*=*####**#+===========:..:*####*===***#######***===#####+.....
-  .-####***##*####***#*********#:.*#######===***#######***===#######+...
-  ..=######*#.+#####************:####*****===***#######***===#***####*:.
-  ....+######..-*####################**#=====***#######***====+#**####=.
-  ......:-+**.....-=**################*++++++############**++++*######+.
-  ..............................-==-......::..........-.......::........
-<<<<<<< HEAD
-  ...............................          Technologies            .....
-  ......................................................................
-=======
-  ...............................          Technologies            .......
-  ........................................................................
->>>>>>> 531fcd5 (v0.1.29  Align project links and prompt using internal padding container)
+.==========......:-===-:.............-====:......-============+==+===.
+.*###**#==+...-###########:......:*##########=...+###***=====***####+.
+.*###**#==+.-*##############-...*##############=.+###***===##**####*-.
+.*###**#==+=###%*********####=:####*********####++###***===#*######-..
+.*###**#==*####****===****####%####***===*#**########***===#####*=....
+.*###**#==*####***=====*#######*********===***#######***+==%%*-:......
+.*###**#*=*####**#+===========:..:*####*===***#######***===#####+.....
+.-####***##*####***#*********#:.*#######===***#######***===#######+...
+..=######*#.+#####************:####*****===***#######***===#***####*:.
+....+######..-*####################**#=====***#######***====+#**####=.
+......:-+**.....-=**################*++++++############**++++*######+.
+..............................-==-......::..........-.......::........
+...............................          Technologies            .....
+......................................................................
       </pre>
     </div>
 
     <div class="content-frame">
-<<<<<<< HEAD
-      <div class="project-line">
-        <span class="link-text"><a href="#">HULL (Based on Quake 3 Engine)</a></span>
-        <span class="tag-text">[v1.0.0]</span>
-      </div>
-      <div class="project-line">
-        <span class="link-text"><a href="#">Telefact – Ceefax-style RSS Reader</a></span>
-        <span class="tag-text">[v0.9.0]</span>
-      </div>
-      <div class="prompt-line">
-        <span>&gt;</span><span class="blink">_</span>
-=======
       <div class="content-inner">
 
         <div class="project-line">
@@ -66,24 +48,14 @@
 
         <div class="prompt-line">&gt;<span class="blink">_</span></div>
 
->>>>>>> 531fcd5 (v0.1.29  Align project links and prompt using internal padding container)
       </div>
     </div>
 
     <div class="x-link">
-<<<<<<< HEAD
-        <img src="assets/logos/x-logo-green.png" alt="X logo">
-        <a href="https://x.com/stutheironman" class="x-handle" target="_blank">@stutheironman</a>
-    </div>
-      
-  </main>
-=======
       <img src="assets/logos/x-logo-green.png" alt="X Logo" />
       <a href="https://x.com/stutheironman" target="_blank" class="x-handle">@stutheironman</a>
     </div>
 
   </div>
-
->>>>>>> 531fcd5 (v0.1.29  Align project links and prompt using internal padding container)
 </body>
 </html>
