--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Leak Technologies</title>
-  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet" />
+  <meta name="viewp:contentReference[oaicite:1]{index=1}nologies</title>
+  <link href="https://fonts.googleapis.com/cs:contentReference[oaicite:2]{index=2} />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -30,47 +29,41 @@
 </pre>
 </div>
 
-<!-- Projects + Cursor -->
-<div class="content-frame">
-  <div class="content-inner">
+    <!-- Menu Frame: links + cursor -->
+    <div class="content-frame">
+      <div class="project-line">
+        <a href="https://github.com/stu-the-ironman/HULL_ioQ3a"
+           target="_blank"
+           class="link-text">
+          HULL (Based on Quake 3 Engine)
+        </a>
+        <span class="tag-text">[v1.0.0]</span>
+      </div>
 
-    <div class="project-line">
-      <a
-        href="https://github.com/stu-the-ironman/HULL_ioQ3a"
-        target="_blank"
-        class="link-text"
-      >
-        HULL (Based on Quake 3 Engine)
-      </a>
-      <span class="tag-text">[v1.0.0]</span>
+      <div class="project-line">
+        <a href="https://github.com/LeakTechnologies/Telefact"
+           target="_blank"
+           class="link-text">
+          Telefact – Ceefax-style RSS Reader
+        </a>
+        <span class="tag-text">[v0.9.0]</span>
+      </div>
+
+      <div class="prompt-line">
+        &gt;<span class="blink">_</span>
+      </div>
     </div>
 
-    <div class="project-line">
-      <a
-        href="https://github.com/LeakTechnologies/Telefact"
-        target="_blank"
-        class="link-text"
-      >
-        Telefact – Ceefax-style RSS Reader
+    <!-- X handle -->
+    <div class="x-link">
+      <img src="assets/logos/x-logo-green.png" alt="X logo" />
+      <a href="https://x.com/stutheironman"
+         target="_blank"
+         class="x-handle">
+        @stutheironman
       </a>
-      <span class="tag-text">[v0.9.0]</span>
-    </div>
-
-    <div class="prompt-line">
-      &gt;<span class="blink">_</span>
     </div>
 
   </div>
-</div>
-
-<!-- X Handle -->
-<div class="x-link">
-  <img src="assets/logos/x-logo-green.png" alt="X logo" />
-  <a href="https://x.com/stutheironman" target="_blank" class="x-handle">
-    @stutheironman
-  </a>
-</div>
-
-</div>
 </body>
 </html>
