--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewp:contentReference[oaicite:1]{index=1}nologies</title>
-  <link href="https://fonts.googleapis.com/cs:contentReference[oaicite:2]{index=2} />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Leak Technologies</title>
+  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
@@ -16,25 +17,25 @@
 .*###**#==+...-###########:......:*##########=...+###***=====***####+.
 .*###**#==+.-*##############-...*##############=.+###***===##**####*-.
 .*###**#==+=###%*********####=:####*********####++###***===#*######-..
-.*###**#==*####****===****####%####***====***########***===#####*=....
+.*###**#==*####****===****####%####***===*#**########***===#####*=....
 .*###**#==*####***=====*#######*********===***#######***+==%%*-:......
 .*###**#*=*####**#+===========:..:*####*===***#######***===#####+.....
-.-####***##*####***#**********:.*#######===***#######***===#######+...
+.-####***##*####***#*********#:.*#######===***#######***===#######+...
 ..=######*#.+#####************:####*****===***#######***===#***####*:.
 ....+######..-*####################**#=====***#######***====+#**####=.
 ......:-+**.....-=**################*++++++############**++++*######+.
-......................................................................
+..............................-==-......::..........-.......::........
 ...............................          Technologies            .....
 ......................................................................
-</pre>
-</div>
+      </pre>
+    </div>
 
     <!-- Menu Frame: links + cursor -->
     <div class="content-frame">
+
       <div class="project-line">
         <a href="https://github.com/stu-the-ironman/HULL_ioQ3a"
-           target="_blank"
-           class="link-text">
+           target="_blank" class="link-text">
           HULL (Based on Quake 3 Engine)
         </a>
         <span class="tag-text">[v1.0.0]</span>
@@ -42,8 +43,7 @@
 
       <div class="project-line">
         <a href="https://github.com/LeakTechnologies/Telefact"
-           target="_blank"
-           class="link-text">
+           target="_blank" class="link-text">
           Telefact – Ceefax-style RSS Reader
         </a>
         <span class="tag-text">[v0.9.0]</span>
