--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0"/>
   <title>Leak Technologies</title>
-  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Hack&display=swap" rel="stylesheet"/>
+  <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
   <div class="main-frame">
@@ -24,44 +24,39 @@
 ..=######*#.+#####************:####*****===***#######***===#***####*:.
 ....+######..-*####################**#=====***#######***====+#**####=.
 ......:-+**.....-=**################*++++++############**++++*######+.
-........................................::..........-.......::........
+..............................-==-..................-.......::........
 ...............................          Technologies            .....
 ......................................................................
       </pre>
     </div>
 
-    <!-- Menu Frame: links + cursor -->
+    <!-- Project links + cursor -->
     <div class="content-frame">
 
       <div class="project-line">
         <a href="https://github.com/stu-the-ironman/HULL_ioQ3a"
-           target="_blank" class="link-text">
-          HULL (Based on Quake 3 Engine)
-        </a>
+           target="_blank"
+           class="link-text">HULL (Based on Quake 3 Engine)</a>
         <span class="tag-text">[v1.0.0]</span>
       </div>
 
       <div class="project-line">
         <a href="https://github.com/LeakTechnologies/Telefact"
-           target="_blank" class="link-text">
-          Telefact – Ceefax-style RSS Reader
-        </a>
+           target="_blank"
+           class="link-text">Telefact – Ceefax-style RSS Reader</a>
         <span class="tag-text">[v0.9.0]</span>
       </div>
 
-      <div class="prompt-line">
-        &gt;<span class="blink">_</span>
-      </div>
+      <div class="prompt-line">&gt;<span class="blink">_</span></div>
+
     </div>
 
     <!-- X handle -->
     <div class="x-link">
-      <img src="assets/logos/x-logo-green.png" alt="X logo" />
+      <img src="assets/logos/x-logo-green.png" alt="X logo"/>
       <a href="https://x.com/stutheironman"
          target="_blank"
-         class="x-handle">
-        @stutheironman
-      </a>
+         class="x-handle">@stutheironman</a>
     </div>
 
   </div>
